edited projects section

--- a/index.html
+++ b/index.html
@@ -44,21 +44,30 @@
                         <li>Excellent at Time Management</li>
                         <li>having a Team Player Mindset</li>
                         <li>Extremely Detailed Oriented and Origanized</li>
+                        <li>Positive Outlook</li>
                     </ul>
                 </div>
             </section>
-            <section>
+            <section class="projects">
                 <!-- This will contain the links to the projects. The pictures need to be greyed out but when the user hovers over the pic, it becomes full color and grows larger. When the user clicks on the img it will take the user to that project's deployed page.-->
                 <h2 id="projects">Projects:</h2>
-                <div class="flex"> <!-- Make this div a flexbox. -->
-                    <h4>Code Refactor</h4>
+                <div class="flexbox"> <!-- Make this div a flexbox. -->
+                    <div class="flex-element">
+                        <h4>Code Refactor</h4>
                         <a href="https://amandac0022.github.io/Code-Refactor-/" target="_blank"><img src="images/code-refactor-screenshot.jpg" alt="Code Refactor Project Screenshot"></a>
-                    <h4>Basic Profile</h4>
+                    </div>
+                    <div class="flex-element">
+                        <h4>Basic Profile</h4>
                         <a href="https://amandac0022.github.io/basic-portfolio/" target="_blank"><img src="images/basic-profile-image.png" alt="Basic Profile Project Screenshot"></a>
-                    <h4>CSS Cheat Sheet</h4>
+                    </div>
+                    <div class="flex-element">
+                        <h4>CSS Cheat Sheet</h4>
                         <a href="https://amandac0022.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><img src="images/CSS-Snippet-Cheat-Sheet-image.png" alt="CSS Cheat Sheet Project Screenshot"></a>
-                    <h4>Coming Soon</h4>
+                    </div>
+                    <div class="flex-element">
+                        <h4>Coming Soon</h4>
                         <a href="#" target="_blank"><img src="images/luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt="Random Image of Computer Code"></a>
+                    </div>
                 </div>
             </section>
             <section> <!-- Contact Me Section -->
