adjustied project images

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <!-- This will contain the links to the projects. The pictures need to be greyed out but when the user hovers over the pic, it becomes full color and grows larger. When the user clicks on the img it will take the user to that project's deployed page.-->
                 <h2 id="projects">Projects:</h2>
                 <div class="flexbox"> <!-- Make this div a flexbox. -->
-                    <div class="flex-element">
+                    <div class="flex-element" style="flex:0 0 80%">
                         <h4>Code Refactor</h4>
-                        <a href="https://amandac0022.github.io/Code-Refactor-/" target="_blank"><img src="images/code-refactor-screenshot.jpg" alt="Code Refactor Project Screenshot"></a>
+                        <a href="https://amandac0022.github.io/Code-Refactor-/" target="_blank"><img id="featureimage" src="images/code-refactor-screenshot.jpg" alt="Code Refactor Project Screenshot"></a>
                     </div>
                     <div class="flex-element">
                         <h4>Basic Profile</h4>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="flex-element">
                         <h4>Coming Soon</h4>
-                        <a href="#" target="_blank"><img src="images/luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt="Random Image of Computer Code"></a>
+                        <a href="#" target="_blank"><img class="comingsoonimage" src="images/luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt="Random Image of Computer Code"></a>
                     </div>
                 </div>
             </section>
