--- a/index.html
+++ b/index.html
@@ -4,102 +4,231 @@
 		<title> Amanda's Portfolio </title> 
 		<meta charset=“UTF-8”> 
 		<meta name=“description” content=“When you search for your website this is the description that shows up”> 
-        <link rel="stylesheet" type="text/css" href="style.css"> 
+        <!-- Google Font Link -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-
+        <!-- Materialize Link -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Materialize Icons Link -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- My CSS Link -->
+        <link rel="stylesheet" type="text/css" href="./assets/style/style2.css"> 
 	</head> 
 	<body>
-        <header>
-            <nav>
-                <!--This is the nav bar at the top I want this to be fixed at the top of the page. -->
-                <a href="#bio"><h4 class="navbutton" class="grow">Bio</h4></a>
-                <a href="#projects"><h4 class="navbutton" class="grow">Projects</h4></a>
-                <a href="#contact"><h4 class="navbutton" class="grow">Contact</h4></a>
-                <a href="#links"><h4 class="navbutton" class="grow">Links</h4></a>
-            </nav>
-        </header>
+<!-- Nav Bar -->
+    <nav>
+        <div class="nav-wrapper">
+        <a href="#!" class="brand-logo">Logo</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="sass.html">Sass</a></li>
+            <li><a href="badges.html">Components</a></li>
+            <li><a href="collapsible.html">Javascript</a></li>
+            <li><a href="mobile.html">Mobile</a></li>
+        </ul>
+        </div>
+    </nav>
 
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">Javascript</a></li>
+        <li><a href="mobile.html">Mobile</a></li>
+    </ul>
+          
+<!-- Home Page -->
         <main>
-            <h1 id="bio"> Amanda Morgan</h1>
-            <aside> 
-                <!-- This contains my profile pic with the Bob Ross quote. I want when you hover over my profile pic that it greys out and shows the Bob Ross quote. -->
-                <figure class="profile-image">
-                    <img id="profile-pic" src="images/profile.pic.jpg" alt="My profile picture">
+            <section>
+    <!-- Profile Picture -->
+                <div class="col s12 m7">
+                    <h2 class="header">Amanda Morgan</h2>
+                    <div class="card large horizontal">
+                    <div class="card-image">
+                        <img src="images/profile.pic.jpg" alt="My profile picture">
+                    </div>
                     <div class="overlay"> 
                         <div>      
                             <p class="overlay-text"><i>"We don't make mistakes, just happy accidents." <br> ~ Bob Ross</i></p> 
                         </div>
                     </div>
-                </figure>
-            </aside>
-            <section class="bio-scroll">
-                <!-- This is my Short Bio. I want this to be hidden with a vertical scroll bar. I want each paragraph to be indented. -->
-                <div>
-                    <p>Hi! My name is Amanda Morgan and I am currently in the process of switching careers from being an Elementary School Art Teacher to a Full Stack Website Developer.</p>
-                    <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a href= "https://www.etsy.com/shop/TheRetroStitch" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
-                    <strong><p>My Best Qualities are:</p></strong>
-                    <ul>
-                        <li>Hard Working and Devoted to my Job</li>
-                        <li>Excellent at Time Management</li>
-                        <li>having a Team Player Mindset</li>
-                        <li>Extremely Detailed Oriented and Origanized</li>
-                        <li>Positive Outlook</li>
-                    </ul>
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <h3>Web Developer</h3>
+                            <h3>Designer</h3>
+                            <h3>Artist</h3>
+                            <h3>Teacher</h3>
+                            <div>
+                                <p>Hi! My name is Amanda Morgan and I am currently in the process of switching careers from being an Elementary School Art Teacher to a Full Stack Website Developer.</p>
+                                <p>I am passionate about making, creating, designing, and building. Let me make your next website.</p>
+                            </div>
+                        </div>
+                        <div class="card-action">
+                        <a href="#">See My Full Story</a>
+                        </div>
+                    </div>
+                    </div>
                 </div>
+            </section>
+
+            <section>
+<!-- About Page -->
+                <h3>About Me</h3>
+                <p>I have always had the desire to create things since I was a little girl. I grew that passion in college when I majored in Art, particularly sculpture, from Auburn University with a minor in Art History. I then did an internship at the Birmingham Museum of Art creating lessons and resources for teachers and children using the Museum's collection. They hired me on after my intership to work in Bart's Art Venture where I interacted with families and school groups who came to visit the museum. I worked there for one year until I started graduate school at the University of Montevallo. I received my Masters in Education in 2016.</p>
+                <p>I then enbarked on my career path. I worked at Brookwood Middle School for 2 years as their Art Teacher. I then moved to Pelham Ridge Elementary where I taught almost 1,000 Pre-K through 5th graders for two years. I moved to Elvin Hill Elementary School two years ago and have been teaching K through 5th grade Art.</p> 
+                <p>After 6 years of teaching in the public school system, I needed a change of pace. I began to research different career options for a creative mind and discovered Website Development. With my Art's background, creative mind, leadership skills as a teacher, and bubbly demenor I am ready to make my debut in this new career field.</p>
+                <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a href= "https://www.etsy.com/shop/TheRetroStitch" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
             </section>
             <section class="projects">
-                <!-- This will contain the links to the projects. The pictures need to be greyed out but when the user hovers over the pic, it becomes full color and grows larger. When the user clicks on the img it will take the user to that project's deployed page.-->
-                <h2 id="projects">Projects:</h2>
-                <div class="flexbox"> <!-- Make this div a flexbox. -->
-                    <div class="flex-element" style="flex:0 0 80%">
-                        <h4>Code Refactor</h4>
-                        <a href="https://amandac0022.github.io/Code-Refactor-/" target="_blank"><img id="featureimage" src="images/code-refactor-screenshot.jpg" alt="Code Refactor Project Screenshot"></a>
-                    </div>
-                    <div class="flex-element">
-                        <h4>Basic Profile</h4>
-                        <a href="https://amandac0022.github.io/basic-portfolio/" target="_blank"><img src="images/basic-profile-image.png" alt="Basic Profile Project Screenshot"></a>
-                    </div>
-                    <div class="flex-element">
-                        <h4>CSS Cheat Sheet</h4>
-                        <a href="https://amandac0022.github.io/CSS-Snippet-Cheat-Sheet/" target="_blank"><img src="images/CSS-Snippet-Cheat-Sheet-image.png" alt="CSS Cheat Sheet Project Screenshot"></a>
-                    </div>
-                    <div class="flex-element">
-                        <h4>Coming Soon</h4>
-                        <a href="#" target="_blank"><img class="comingsoonimage" src="images/luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt="Random Image of Computer Code"></a>
-                    </div>
+<!-- Project Page -->
+                <h2 id="projects">Projects</h2>
+                <div>
+                    <div class="col s12 m7">
+                        <h2 class="header">Brain Breaks</h2>
+                        <div class="card large horizontal">
+                          <div class="card-image">
+                            <img src="https://lorempixel.com/100/190/nature/6">
+                          </div>
+                          <div class="card-stacked">
+                            <div class="card-content">
+                              <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col s12 m7">
+                        <h2 class="header">Weather App</h2>
+                        <div class="card large horizontal">
+                          <div class="card-image">
+                            <img src="https://lorempixel.com/100/190/nature/6">
+                          </div>
+                          <div class="card-stacked">
+                            <div class="card-content">
+                              <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col s12 m7">
+                        <h2 class="header">Day Planner</h2>
+                        <div class="card large horizontal">
+                          <div class="card-image">
+                            <img src="https://lorempixel.com/100/190/nature/6">
+                          </div>
+                          <div class="card-stacked">
+                            <div class="card-content">
+                              <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col s12 m7">
+                        <h2 class="header">Code Quiz</h2>
+                        <div class="card large horizontal">
+                          <div class="card-image">
+                            <img src="https://lorempixel.com/100/190/nature/6">
+                          </div>
+                          <div class="card-stacked">
+                            <div class="card-content">
+                              <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">This is a link</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </div>
+                <ul class="pagination">
+                    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                    <li class="active"><a href="#!">1</a></li>
+                    <li class="waves-effect"><a href="#!">2</a></li>
+                    <li class="waves-effect"><a href="#!">3</a></li>
+                    <li class="waves-effect"><a href="#!">4</a></li>
+                    <li class="waves-effect"><a href="#!">5</a></li>
+                    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                  </ul>
             </section>
-            <section class="form-container"> <!-- Contact Me Section -->
+            <section class="form-container"> 
+<!-- Contact Me Section -->
                 <h2 id="contact">Contact Me</h2>
                 <form>
                     <!-- input form below -->
-                    <label for="fname">First name:</label>
-                    <input type="text" id="fname" name="fname" required> <br>
-                    <label for="lname">Last name:</label>
-                    <input type="text" id="lname" name="lname" required><br>
-                    <label for="email">Email:</label>
-                    <input type="text" id="email" name="email" required><br>
-                    <textarea type="text" name="inputBox" placeholder="Enter your message here:"></textarea> <br>
-                    <input id="submit" type="submit" value="Submit">
+                    <div class="row center-align">
+                        <form class="col s12">
+                          <div class="row">
+                            <div class="input-field col s4">
+                              <i class="material-icons prefix">account_circle</i>
+                              <input id="icon_prefix" type="text" class="validate">
+                              <label for="icon_prefix">Name</label>
+                            </div>
+                            <div class="input-field col s4">
+                              <i class="material-icons prefix">phone</i>
+                              <input id="icon_telephone" type="tel" class="validate">
+                              <label for="icon_telephone">Telephone</label>
+                            </div>
+                            <div class="input-field col s4">
+                                <i class="material-icons prefix">email</i>
+                                <input id="icon_email" type="email" class="validate">
+                                <label for="icon_email">Email</label>
+                              </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">mode_edit</i>
+                                <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                                <label for="icon_prefix2">Type your Message or Question here</label>
+                                <span class="helper-text" data-error="wrong" data-success="right"></span>
+                              </div>
+                        </div>
+                        </form>
+                      </div>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <i class="material-icons right">send</i>
+                    </button>
                 </form>
             </section>
         </main>
-
-        <footer>
-            <!-- Colored bar at the bottom that has my info, email, github, phone, portfolio-->
-            <div id="links">
-                <p id="links">@2021</p>
-                <p>Phone:(###)###-####</p>
-                <p>Email: AmandaC0022@gmail.com</p>
+<!-- Footer -->
+        <footer class="page-footer">
+            <div class="container">
+              <div class="row">
+<!-- Email and Phone # -->
+                <div class="col l6 s12">
+                  <h5 class="white-text">Contact</h5>
+                  <p class="grey-text text-lighten-4">Email: AmandaC0022@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Telephone: (###) ###-####</p>
+                </div>
+<!-- Links -->
+                <div class="col l4 offset-l2 s12">
+                  <h5 class="white-text">Links</h5>
+                  <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">Etsy Shop</a></li>
+                  </ul>
+                </div>
+              </div>
             </div>
-                <figure class="etsy-link">
-                    <a href="https://www.etsy.com/shop/TheRetroStitch" title="Go to Amanda's Etsy Shop" target="_blank"><img src="images/17-176666_etsy-logo-transparent-png-burial-young-death-nightmarket.png" alt="link to The Retro Stitch Etsy Shop"></a>
-                </figure>
-                <figure class="github-link">
-                    <a href="https://github.com/AmandaC0022" title="Go to Amanda's GitHub Profile" target="_blank"><img src="images/2048px-Octicons-mark-github.svg.png" alt="link to github account"></a>
-                </figure>
-        </footer>
-
+            <div class="footer-copyright">
+              <div class="container">
+              © 2021 Copyright Text
+              </div>
+            </div>
+          </footer>
+        <!-- JavaScript Link -->
+            <script src="assets/javascript/script.js" type="text/javascript"></script>
+        <!-- JQuery Link  -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>  
+        <!-- Materialize JavaScript Link -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
 	</body>
 </html> 
