--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</head> 
 	<body>
 <!-- Nav Bar -->
-    <div class="navbar-fixed">
+    <div class="navbar-fixed">         
         <nav>
             <div class="nav-wrapper">
             <a href="#home-page" class="brand-logo"><i class="large material-icons">home</i></a>
-            <!-- <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#about-me-page">About</a></li>
                 <li><a href="#projects-page">Projects</a></li>
@@ -227,11 +227,11 @@
               </div>
             </div>
           </footer>
-        <!-- JavaScript Link -->
-            <script src="assets/javascript/script.js" type="text/javascript"></script>
         <!-- JQuery Link  -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>  
         <!-- Materialize JavaScript Link -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
+        <!-- JavaScript Link -->
+        <script src="assets/javascript/script.js" type="text/javascript"></script>
 	</body>
 </html> 
