--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta charset=“UTF-8”> 
 		<meta name=“description” content=“When you search for your website this is the description that shows up”> 
         <!-- Google Font Link -->
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
         <!-- Materialize Link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <!-- Materialize Icons Link -->
@@ -18,8 +19,8 @@
 <!-- Nav Bar -->
     <div class="navbar-fixed">         
         <nav>
-            <div class="nav-wrapper">
-            <a href="#home-page" class="brand-logo"><i class="large material-icons">home</i></a>
+            <div class="nav-wrapper nav-wrapper-custom">
+            <a href="#home-page" class="brand-logo home-icon"><i class="home-icon" class="large material-icons">home</i></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#about-me-page">About</a></li>
