added project images

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                               <p>I am passionate about making, creating, designing, and building. Let me make your next website!</p>
                           </div>
                         <div class="card-action" id="profile-link">
-                        <a href="#about-me-page">See My Full Story</a>
+                          <a href="#about-me-page">See My Full Story</a>
                         </div>
                     </div>
                     </div>
@@ -91,80 +91,69 @@
             </section>
             <section id="projects-page">
 <!-- Project Page -->
-                <h2 id="projects">Projects</h2>
-                <div>
+                <h3>Projects</h3>
+                  <div class="col s12 m7">
+                      <div class="card custom-card horizontal">
+                        <div class="card-image">
+                          <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
+                        </div>
+                        <div class="card-stacked">
+                          <div class="card-content">
+                            <h4 class="header">Brain Breaks</h4>
+                            <p>I am a very simple card. I am good at containing small bits of information.</p>
+                          </div>
+                          <div class="card-action custom-link">
+                            <a href="#" target="_blank">Tour the App Here</a>
+                          </div>
+                          <div class="card-action custom-link">
+                            <a href="#" target="_blank">See the Code Here</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                     <div class="col s12 m7">
-                        <h2 class="header">Brain Breaks</h2>
-                        <div class="card large horizontal">
-                          <div class="card-image">
-                            <img src="https://lorempixel.com/100/190/nature/6">
+                      <div class="card custom-card horizontal">
+                        <div class="card-image">
+                          <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
+                        </div>
+                        <div class="card-stacked">
+                          <div class="card-content">
+                            <h4 class="header">Weather App</h4>
+                            <p>I am a very simple card. I am good at containing small bits of information.</p>
                           </div>
-                          <div class="card-stacked">
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.</p>
-                            </div>
-                            <div class="card-action">
-                              <a href="#">This is a link</a>
-                            </div>
+                          <div class="card-action">
+                            <a href="#" target="_blank">Tour the App Here</a>
+                          </div>
+                          <div class="card-action custom-link">
+                            <a href="#" target="_blank">See the Code Here</a>
                           </div>
                         </div>
                       </div>
-                      <div class="col s12 m7">
-                        <h2 class="header">Weather App</h2>
-                        <div class="card large horizontal">
-                          <div class="card-image">
-                            <img src="https://lorempixel.com/100/190/nature/6">
+                    </div>
+                    <div class="col s12 m7">
+                      <div class="card custom-card horizontal">
+                        <div class="card-image">
+                          <img src="./images/code-quiz-pic.png" alt="screenshot of Code Quiz webpage">
+                        </div>
+                        <div class="card-stacked">
+                          <div class="card-content">
+                            <h4 class="header">Code Quiz Game</h4>
+                            <p>I am a very simple card. I am good at containing small bits of information.</p>
                           </div>
-                          <div class="card-stacked">
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.</p>
-                            </div>
-                            <div class="card-action">
-                              <a href="#">This is a link</a>
-                            </div>
+                          <div class="card-action custom-link">
+                            <a href="#" target="_blank">Tour the App Here</a>
+                          </div>
+                          <div class="card-action custom-link">
+                            <a href="#" target="_blank">See the Code Here</a>
                           </div>
                         </div>
                       </div>
-                      <div class="col s12 m7">
-                        <h2 class="header">Day Planner</h2>
-                        <div class="card large horizontal">
-                          <div class="card-image">
-                            <img src="https://lorempixel.com/100/190/nature/6">
-                          </div>
-                          <div class="card-stacked">
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.</p>
-                            </div>
-                            <div class="card-action">
-                              <a href="#">This is a link</a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col s12 m7">
-                        <h2 class="header">Code Quiz</h2>
-                        <div class="card large horizontal">
-                          <div class="card-image">
-                            <img src="https://lorempixel.com/100/190/nature/6">
-                          </div>
-                          <div class="card-stacked">
-                            <div class="card-content">
-                              <p>I am a very simple card. I am good at containing small bits of information.</p>
-                            </div>
-                            <div class="card-action">
-                              <a href="#">This is a link</a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                </div>
+                    </div>
                 <ul class="pagination">
                     <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
                     <li class="active"><a href="#!">1</a></li>
                     <li class="waves-effect"><a href="#!">2</a></li>
                     <li class="waves-effect"><a href="#!">3</a></li>
-                    <li class="waves-effect"><a href="#!">4</a></li>
-                    <li class="waves-effect"><a href="#!">5</a></li>
                     <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
                   </ul>
             </section>
