added project links

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                             <p>I am a very simple card. I am good at containing small bits of information.</p>
                           </div>
                           <div class="card-action custom-link">
-                            <a href="#" target="_blank">Tour the App Here</a>
+                            <a href="https://genius2k21.github.io/07-Project-Brain_Breaks/" target="_blank">Tour the App Here</a>
                           </div>
                           <div class="card-action custom-link">
-                            <a href="#" target="_blank">See the Code Here</a>
+                            <a href="https://github.com/AmandaC0022/07-Project-Brain_Breaks" target="_blank">See the Code Here</a>
                           </div>
                         </div>
                       </div>
@@ -122,10 +122,10 @@
                             <p>I am a very simple card. I am good at containing small bits of information.</p>
                           </div>
                           <div class="card-action">
-                            <a href="#" target="_blank">Tour the App Here</a>
+                            <a href="https://amandac0022.github.io/Weather-App-AMM/" target="_blank">Tour the App Here</a>
                           </div>
                           <div class="card-action custom-link">
-                            <a href="#" target="_blank">See the Code Here</a>
+                            <a href="https://github.com/AmandaC0022/Weather-App-AMM" target="_blank">See the Code Here</a>
                           </div>
                         </div>
                       </div>
@@ -141,10 +141,10 @@
                             <p>I am a very simple card. I am good at containing small bits of information.</p>
                           </div>
                           <div class="card-action custom-link">
-                            <a href="#" target="_blank">Tour the App Here</a>
+                            <a href="https://amandac0022.github.io/Code-Quiz-AMM/" target="_blank">Tour the App Here</a>
                           </div>
                           <div class="card-action custom-link">
-                            <a href="#" target="_blank">See the Code Here</a>
+                            <a href="https://github.com/AmandaC0022/Code-Quiz-AMM" target="_blank">See the Code Here</a>
                           </div>
                         </div>
                       </div>
